--- a/css/styles.css
+++ b/css/styles.css
@@ -1739,11 +1739,12 @@ video {
   color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 
-/*.text-gray-900 {
+.text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
-.text-green-400 {
+
+/*.text-green-400 {
   --tw-text-opacity: 1;
   color: rgb(74 222 128 / var(--tw-text-opacity));
 }
