--- a/css/styles.css
+++ b/css/styles.css
@@ -1744,11 +1744,12 @@ video {
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
-/*.text-green-400 {
+.text-green-400 {
   --tw-text-opacity: 1;
   color: rgb(74 222 128 / var(--tw-text-opacity));
 }
-.text-indigo-100 {
+
+/*.text-indigo-100 {
   --tw-text-opacity: 1;
   color: rgb(224 231 255 / var(--tw-text-opacity));
 }
