--- a/css/styles.css
+++ b/css/styles.css
@@ -1764,11 +1764,12 @@ video {
   color: rgb(168 85 247 / var(--tw-text-opacity));
 }
 
-/*.text-purple-600 {
+.text-purple-600 {
   --tw-text-opacity: 1;
   color: rgb(147 51 234 / var(--tw-text-opacity));
 }
-.text-transparent {
+
+/*.text-transparent {
   color: transparent;
 }
 .text-white {
