--- a/css/styles.css
+++ b/css/styles.css
@@ -1893,10 +1893,11 @@ video {
   --tw-ring-offset-width: 2px;
 }
 
-/*.ring-offset-indigo-200 {
+.ring-offset-indigo-200 {
   --tw-ring-offset-color: #c7d2fe;
 }
-.blur-md {
+
+/*.blur-md {
   --tw-blur: blur(12px);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast)
     var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate)
