--- a/css/styles.css
+++ b/css/styles.css
@@ -1972,10 +1972,11 @@ video {
   transition-duration: 0.7s;
 }
 
-/*.ease-in-out {
+.ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.ease-linear {
+
+/*.ease-linear {
   transition-timing-function: linear;
 }
 .ease-out {
