--- a/css/styles.css
+++ b/css/styles.css
@@ -1976,10 +1976,11 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/*.ease-linear {
+.ease-linear {
   transition-timing-function: linear;
 }
-.ease-out {
+
+/*.ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 body {
