--- a/css/styles.css
+++ b/css/styles.css
@@ -1980,10 +1980,11 @@ video {
   transition-timing-function: linear;
 }
 
-/*.ease-out {
+.ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
-body {
+
+/*body {
   font-size: 15px;
   overflow-x: hidden;
   --tw-text-opacity: 1;
