--- a/css/styles.css
+++ b/css/styles.css
@@ -2000,11 +2000,12 @@ h6 {
   font-weight: 600;
 }
 
-/*.before\:absolute::before {
+.before\:absolute::before {
   content: var(--tw-content);
   position: absolute;
 }
-.before\:bottom-0::before {
+
+/*.before\:bottom-0::before {
   content: var(--tw-content);
   bottom: 0;
 }
