--- a/css/styles.css
+++ b/css/styles.css
@@ -2020,11 +2020,12 @@ h6 {
   height: 2px;
 }
 
-/*.before\:w-0::before {
+.before\:w-0::before {
   content: var(--tw-content);
   width: 0;
 }
-.before\:bg-amber-300::before {
+
+/*.before\:bg-amber-300::before {
   content: var(--tw-content);
   --tw-bg-opacity: 1;
   background-color: rgb(252 211 77 / var(--tw-bg-opacity));
