--- a/css/styles.css
+++ b/css/styles.css
@@ -2031,13 +2031,14 @@ h6 {
   background-color: rgb(252 211 77 / var(--tw-bg-opacity));
 }
 
-/*.before\:transition-all::before {
+.before\:transition-all::before {
   content: var(--tw-content);
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
-.before\:duration-500::before {
+
+/*.before\:duration-500::before {
   content: var(--tw-content);
   transition-duration: 0.5s;
 }
