--- a/css/styles.css
+++ b/css/styles.css
@@ -2058,11 +2058,12 @@ h6 {
   left: 0;
 }
 
-/*.after\:-z-10::after {
+.after\:-z-10::after {
   content: var(--tw-content);
   z-index: -10;
 }
-.after\:h-0::after {
+
+/*.after\:h-0::after {
   content: var(--tw-content);
   height: 0;
 }
