--- a/css/styles.css
+++ b/css/styles.css
@@ -2079,12 +2079,13 @@ h6 {
   background-color: rgb(252 211 77 / var(--tw-bg-opacity));
 }
 
-/*.after\:text-white::after {
+.after\:text-white::after {
   content: var(--tw-content);
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-.after\:transition-all::after {
+
+/*.after\:transition-all::after {
   content: var(--tw-content);
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
